增加些内容

--- a/menu.html
+++ b/menu.html
@@ -10,10 +10,11 @@
 <div class="ui container">
     <h2 class="ui dividing header">menu</h2>
 
-    <div class="ui menu">
-        <div class="header item">主页</div>
+    <!---->
+    <div class="ui secondary pointing stackable menu">
+        <div class="header item">ninghao.net</div>
         <a href="" class="item">课程</a>
-        <a href="" class="item">博客</a>
+        <a href="" class="active item">博客</a>
         <a href="" class="item">社区</a>
         <div class="item">
             <div class="ui icon input">
